HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/AssociatedTypeMissingBinding/Source/Main.uv
//! Rejected polymorphism specimen for a missing abstract associated type binding.

internal class AbstractAssociatedTypeClass {
    internal type Item
}

internal record MissingAssociatedTypeBinding <: AbstractAssociatedTypeClass {
    internal value: i32
}
